# HAM

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  GITHUB_READY.md  GITHUB_SETUP.md  GIT_GUIDE.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  SECURITY.md  docker-compose.yml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_idp_provider.md  new_mdm_provider.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  abm_service.py  auth.py  base_mdm_service.py  fleet_service.py  init_db.py  jamf_service.py  main.py  models.py  okta_service.py  pyproject.toml  requirements.txt  seed_data.py
backend/migrations/: add_applecare_columns.py
docs/: abm.md  applecare.md  fleet.md  identity-providers.md  jamf.md  local-auth.md  okta.md
frontend/: .env.example  .npmrc  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ABMSync.js  AppleLogo.js  AssetCreate.js  AssetDetail.js  AssetList.js  Dashboard.js  FleetSync.js  Layout.js  Login.js  Settings.js
frontend/src/utils/: api.js
